# rust-rest-template-test

.cargo/: config.toml
cli/: Cargo.toml
config/: Cargo.toml
db/: Cargo.toml
web/: Cargo.toml
web/src/: lib.rs  main.rs  state.rs
web/tests/: example_test.rs
web/tests/common/: mod.rs
